--- a/backend/serverless.yml
+++ b/backend/serverless.yml
@@ -1,4 +1,3 @@
-# TODO: Change the name of the org 
 org: aymanuell
 app: todo-serverless-app-2
 service: todo-serverless-app-2
@@ -54,8 +53,8 @@ functions:
           method: get
           path: /
 
-  # Auth:  
-  #   handler: src/lambda/auth/auth0Authorizer.handler
+  Auth:  
+    handler: src/lambda/auth/auth0Authorizer.handler
 
   # TODO: Configure this function - 
   # Provide iamRoleStatements property for performing Actions on DynamoDB
