GetTodo implemented with RequestValidation on CreateTodo

--- a/backend/serverless.yml
+++ b/backend/serverless.yml
@@ -7,6 +7,9 @@ plugins:
   - serverless-webpack
   - serverless-iam-roles-per-function
   - serverless-plugin-tracing
+  - serverless-reqvalidator-plugin
+  - serverless-aws-documentation
+
 
 provider:
   name: aws
@@ -29,6 +32,7 @@ provider:
     SIGNED_URL_EXPIRATION: 300
     PROJECT_NAME: todo-serverless-app-2
     INDEX_NAME: ${self:provider.environment.TODOS_CREATED_AT_INDEX}
+    AUTH_0_SECRET_ID: -Pky97_JHA233MG_JzXix4U391E7jMlTv_TaeAGZ7V7CO5CgOq8ddxaBMYwFdYia
 
   logs:
     # Enable API Gateway logs
@@ -43,6 +47,20 @@ provider:
             - xray:PutTraceSegments
           Resource: "*"
 
+custom:
+  documentation:
+    api:
+      info:
+        version: v1.0.0
+        title: Todos Serverless App
+        description: Request Validator
+    models:
+      - name: CreateTodoRequest
+        contentType: application/json
+        schema: ${file(models/create-todo-model.json)}
+      # - name: UpdateTodoRequest
+      #   contentType: application/json
+      #   schema: ${file(models/update-todo-model.json)}
 
 functions:
 
@@ -58,14 +76,29 @@ functions:
 
   # TODO: Configure this function - 
   # Provide iamRoleStatements property for performing Actions on DynamoDB
-  # GetTodos:
-  #   handler: src/lambda/http/getTodos.handler
-  #   events:
-  #     - http:
-  #         method: get
-  #         path: todos
-  #         cors: true
-  #         authorizer: Auth
+  GetTodos:
+    handler: src/lambda/http/getTodos.handler
+    events:
+      - http:
+          method: get
+          path: todos
+          cors: true
+          authorizer: Auth
+    iamRoleStatementsName: ${self:provider.environment.PROJECT_NAME}-get-todo-role-${self:provider.stage}
+    iamRoleStatements:
+        - Effect: Allow
+          Action: 
+            - dynamodb:Query
+          Resource: arn:aws:dynamodb:${self:provider.region}:*:table/${self:provider.environment.TODOS_TABLE}
+        - Effect: Allow
+          Action: 
+            - dynamodb:Query
+          Resource: arn:aws:dynamodb:${self:provider.region}:*:table/${self:provider.environment.TODOS_TABLE}/index/${self:provider.environment.INDEX_NAME}        
+        - Effect: Allow
+          Action: 
+            - xray:PutTraceSegments
+          Resource:
+            - '*'          
 
   # TODO: Configure this function - 
   # Provide iamRoleStatements property. Decide the Actions and AWS Resource. 
@@ -78,10 +111,13 @@ functions:
           method: post
           path: todos
           cors: true
-  #         authorizer: Auth
-  #         request:
-  #           schemas:
-  #             application/json: ${file(models/create-todo-model.json)}
+          authorizer: Auth 
+          reqValidatorName: RequestBodyValidator
+          documentation:
+            summary: Create a new todo
+            description: create a new todo task
+            requestModels:
+              'application/json': CreateTodoRequest
     iamRoleStatementsName: ${self:provider.environment.PROJECT_NAME}-create-todo-role-${self:provider.stage}
     iamRoleStatements:
         - Effect: Allow
@@ -150,6 +186,16 @@ resources:
         ResponseType: DEFAULT_5XX
         RestApiId:
           Ref: 'ApiGatewayRestApi'
+
+
+    RequestBodyValidator:
+      Type: AWS::ApiGateway::RequestValidator
+      Properties:
+        Name: 'request-body-validator'
+        RestApiId:
+          Ref: ApiGatewayRestApi
+        ValidateRequestBody: true
+        ValidateRequestParameters: false
 
     
     # TODO: Create a DynamoDB table with local secondary index and a composite key
